tests/compilefail62.out
[1mtests/compilefail62.pas:5:5: [0m[1m[91merror:[0m writeln() called without 'output' defined
     5 | 	writeln(0);