tests/compilefail62.pas
program compilefail62;
{try to write without defining 'output' as a program parameter}

begin
	writeln(0);
end.
